ObsidianViewer.css
:root {
    --Border-Radius: min(3vh, 3vw);
    --Border-Thickness: 3px;

    --Internal-Link-Color: rgb(190, 2, 190);
    --External-Link-Color: rgb(241, 180, 180);
    
    --MainWidth: 8in
}

body {
    background-color: rgb(37, 37, 37);
    display: flex;
    flex-direction: column;

    font-family: sans-serif;
}

.Display[hidden] {
    display: none;
}

.Display {
    height: 100%;
    /* No need for padding if it's automatic pretty much...
    padding-left: min(20vw, 2in);
    padding-right: min(20vw, 2in);
    */
    align-self: center;
    display: flex;
    flex-direction: column;
    width: min(80vw, var(--MainWidth));
    color: white;
}

.DarkButton {
    background-color: grey;
}

#ButtonContainer {
    position: fixed;
    display: flex;
    flex-direction: column;
    top: min(3%, 1in);
    left: min(3%, 1in);
}

.DarkButton:hover {
    background-color: rgb(107, 107, 107);
}

a {
    color: var(--Internal-Link-Color);
    text-decoration: underline dotted rgb(121, 0, 121);
    text-indent: 0;
}

a[search]:hover::after {
    content: "Link will scroll to heading: " attr(search);
    display: block;
    transform: translateX(-50%);
    position: absolute;
    width: max(3in, 30vw);
    height: 3em;
    left: 50%;
    background: black;
    padding: 15px;
    overflow: clip;
    overflow-clip-margin: content-box;
    overflow-wrap: anywhere;
    text-overflow: ellipsis;
    border-radius: var(--Border-Radius);
    border: solid var(--Internal-Link-Color);

    /* Initially hidden, shown by animation. */
    opacity: 0;
    animation: fadeIn 0.25s ease-in forwards
}

a:hover {
    color: rgb(201, 0, 201);
    text-decoration: underline dotted rgb(201, 0, 201);
}

a[external] {
    position: relative;
    display: inline-flex;
    color: lightcoral;
    text-decoration: underline dotted lightcoral;
}

a[external]:hover {
    color: var(--External-Link-Color);
    text-decoration: underline dotted var(--External-Link-Color);
}

externallinkafterimage {
    content: url(FTP/Site_Media/Logo/ExternalObsidianLink.png);
    width: 1em;
    height: 1em;
    display: inline-block;
    break-before: avoid;
    transform: translate(0.1em, 0.2em);
}

a[tag] {
    background-color: rgb(83, 0, 83);
    color: rgb(145, 0, 145);
    padding: 0.4em;
    border-radius: 0.2em;
}

a[tag]:hover {
    background-color: rgb(145, 0, 145);
    color: rgb(209, 0, 209);
    padding: 0.4em;
    border-radius: 0.2em;
}

a[external]:hover::after {
    content: " " attr(href);
    display: block;
    transform: translateY(-100%) translateX(-50%);
    position: absolute;
    width: max(3in, 30vw);
    height: 500%;
    left: 50%;
    background: black;
    padding: 15px;
    overflow: clip;
    overflow-clip-margin: content-box;
    overflow-wrap: anywhere;
    text-overflow: ellipsis;
    border-radius: var(--Border-Radius);
    border: solid;

    /* Initially hidden, shown by animation. */
    opacity: 0;
    animation: fadeIn 0.25s ease-in forwards
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

img, svg {
    width: min(90%, 5in);
    position: relative;
    align-self: center;
    display: flex;
}

iframe {
    position: relative;
    align-self: center;
    display: flex;
}

svg {
    width: min(90%, var(--MainWidth)) !important;
    z-index: -1;
}

p:has(img), p:has(svg) {
    display: flex;
    flex-direction: column;
}

pre {
    background-color: rgb(64, 64, 64);
    padding: 3%;
    border: solid rgb(48, 48, 48) var(--Border-Thickness);
    border-radius: var(--Border-Radius);
    width: min(60vw, 6in);
    align-self: center;
}

code {
    text-wrap: wrap;
}

/* Quote shading stuff.*/
blockquote {
    padding: 3%;
    align-self: center;
    border-radius: 3vh;
    /* width: min(80vw, 8in); */

    background-color: darkblue;
    border: solid rgb(0, 16, 78) var(--Border-Thickness);
    color: hsl(240deg 92.66% 80.56%);
}

blockquote > p {
    color:white;
}

blockquote[tldr] {
    background-color: #2a7d8b;
    border: solid #205e69 var(--Border-Thickness);
    color: rgb(117, 221, 255);
}

blockquote[warning] {
    background-color: darkorange;
    border: solid rgb(167, 92, 0) var(--Border-Thickness);
    color: rgb(255, 230, 184);
}

blockquote[danger] {
    background-color: darkred;
    border: solid rgb(80, 0, 0) var(--Border-Thickness);
    color: rgb(255, 182, 182);
}

blockquote[quote] {
    background-color: rgb(80, 80, 80);
    border: solid rgb(51, 51, 51) var(--Border-Thickness);
    color:rgb(161, 161, 161);
}

table, th, td {
    border: var(--Border-Thickness) solid rgb(110, 110, 110);
    border-collapse: collapse;

    color: white;
}

table {
    width: 100%;
}

td {
    text-align: center;
}

li:has(input[type="checkbox"][checked]) {
    color:rgb(184, 184, 184);
}

/* Special spacing for multiple choice questions. */
ol > li > ul > li:has(strong) {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}

div[embed] {
    /* Scooch in a little on both sides, make the background slightly lighter. */
    padding: 3%;
    border: solid rgb(48, 48, 48) var(--Border-Thickness);
    border-radius: var(--Border-Radius);
    background-color: rgb(63, 63, 63);
    display:flex;
    flex-direction: column;
}

div[embed]::before {
    height: 0; 
    width: 100%;
    text-align: right;
    overflow: visible;
    content: attr(document);
    display: block;
}

h1, h2, h3 {
    margin-bottom: 0;
}

/* YBN Load Menu Stylization */
YBN > div:has(button) {
    background-color: lightgrey;
    height: 2em;
    display: flex;
    border: var(--Border-Thickness) solid rgb(110, 110, 110);
    border-radius: var(--Border-Radius);
    padding: var(--Border-Thickness);
    align-items: center;
    justify-content: space-around;
    color: black;
    font-weight: bold;
}

YBN > div > button {
    height: 80%;
    border: var(--Border-Thickness) solid rgb(110, 110, 110);
    border-radius: var(--Border-Radius);
    background-color:inherit;
}

YBN > div > button:hover {
    background-color: rgb(80, 80, 80);
    color: white;
}

/* Code highlighting accesability stuff */ 
.hljs-comment {
    color: rgb(190, 190, 190) !important;
}

/* Mermaid Graph Z-Index bug fix. */
pre.mermaid, pre:has(code.mermaid) {
    z-index: 15; /* If I ever end up making a document with more than 15 nested pages, then it can suffer without diagrams. */
    display: flex;
    justify-content: center;
}

/* Page Numbers */
@page {
    /* margin box at top right showing page number */
    @right-top {
        content: "Bushman " counter(pageNumber);
    }
}

